Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = None"
+    "travel_month = 'January'"
    ]
   },
   {
