--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -70,20 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-5ac5f36e0573>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-5ac5f36e0573>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    travel_month = #\"January\"\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "travel_month = #\"January\""
+    "travel_month = 'January' # \"January\""
    ]
   },
   {
